# q2-pan-classifier

./: .gitattributes  .gitignore  MANIFEST.in  README.md  config.yaml  project_overview.puml  pyproject.toml  requirements.txt  scratch.py  scratch_new.py  setup.cfg  setup.py
junk_test/: accession_file.txt
q2_pan_classifier/: __init__.py  _transformers.py  _version.py  format_types.py  plugin_setup.py  transformers.py
q2_pan_classifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
q2_pan_classifier/actions/: __init__.py  classify_reads.py  create_classifier.py  get_taxonomies_by_taxon_level.py  name_to_accessions.py  prep_sequences.py  read_trimmers.py
q2_pan_classifier/data/: ViralTaxonomy.csv
q2_pan_classifier/pipelines/: __init__.py  classify_reads.py  prep_sequences.py
q2_pan_classifier/scripts/: config.yaml  scratch_new.py  script_methods.py  test_script.sh
q2_pan_classifier/templates/: base.html
q2_pan_classifier/types_formats/: __init__.py  types_and_formats.py
q2_pan_classifier/types_formats_transformers/: __init__.py  _format.py  _transformers.py  _types.py
q2_pan_classifier/utils/: __init__.py
script_test_dir/CoronaVirus/: bat_cov_metadata.tsv  manifest
test_analysis/ENTV_05Mar2022/: ENTV_metadeta.tsv  ENV_classification.qza  entv_manifest  paired_end_demux_ent.qza  primers.fasta
test_data/: MANIFEST  imported_seqs.qza  manifest
test_data/ENTV_05Mar2022/: entv_manifest
test_data/sequences_test/: ENTVReillyMcKay20220228_S30_L001_R2_output.fastq  ENTVxGabaldonx20211206_S8_L001_R2_output.fastq  (+20 more)
(+276 files in other folders)
