[build-system]
requires = ["setuptools", "setuptools-scm", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "q2-pan-classifier"
description = "My package description"
readme = "README.rst"
requires-python = "<=3.11.4"
keywords = ["one", "two"]
license = { text = "ACADEMIC AND RESEARCH LICENSE 2015, The Translational Genomics Research Institute. All rights reserved." }
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ['version']

[tool.setuptools.packages.find]
where = ["q2_pan_classifier"]
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["data"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.entry-points."qiime2.plugins"]
q2-pan-classifier = "q2_pan_classifier.plugin_setup:plugin"


#[project.scripts]
#vectr = "cli.commands:cli"
#culex_popgen = "culex_popgen.main:cli"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "./tests"
]
[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "q2_pan_classifier/_version.py"
versionfile_build = "q2_pan_classifier/_version.py"
parentdir_prefix = "q2-pan-classifier"
tag_prefix = ""